--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "framer-motion": "^11.0.3",
+    "lodash": "^4.17.21",
     "mini-svg-data-uri": "^1.4.4",
     "moment": "^2.30.1",
     "next": "14.1.0",
@@ -33,6 +34,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
